# md

./: .gitignore  Makefile  README.md  __init__.py  argparse_reader.py  build.py  cfg.py  checkpoint.py  config.py  conftest.py  convert_ckpt.py  curriculum.py  data.py  ddim.py  ddpm.py  diffusion.py  domain.py  events.py  flow_heun.py  guided_v.py  indexing.py  job_manager.py  loop_mmdit.py  main.py  mmdit.py  mmdit_smoke_pipeline.md  model.py  model_development_plan.md  objective.py  perf.py  prepare_latents.py  prepare_text_cache.py  pyproject.toml  requests.txt  requirements-web.txt  requirements.txt  runner.py  sample.py  sanity_check.py  smoke_mmdit_rf.py  (+21 more)
backend/: app.py
backend/services/: config_service.py
config/: __init__.py  data.py  eval.py  io.py  loader.py  model.py  text.py  text_encoder.py  train.py  train.yaml  train_base.yaml  train_dev.yaml  train_distributed_smoke.yaml  train_fsdp_template.yaml  train_image_only.yaml  train_milestone_a.yaml  train_milestone_b.yaml  train_milestone_c.yaml  train_mmdit_rf.yaml  train_mmdit_rf_dev.yaml  train_mmdit_rf_overfit.yaml  train_mmdit_rf_overfit_resume.yaml  train_mmdit_rf_smoke.yaml  train_mmdit_rf_smoke_resume.yaml  train_mmdit_rf_tiny.yaml  train_overfit.yaml  train_smoke.yaml  train_text_to_image.yaml  vae.py
control/: __init__.py  preprocess.py
core/: diffusion.py  schedules.py
data/eval_prompts/: characters.txt  core.txt  inpaint.txt  mmdit_core.txt  mmdit_style.txt  style.txt  text_rendering.txt
data_loader/: __init__.py  buckets.py  collate.py  config.py  dataset.py  images.py  index.py  indexing.py  latents.py  sampling.py  types.py
ddpm/: config.py  data.py  ddim.py  model.py  text.py  utils.py  vae.py
diffusion/: __init__.py  config.py  data.py  ddim.py  diffusion.py  domain.py  events.py  model.py  text.py  utils.py  vae.py
diffusion/bpe/: vocab.json
diffusion/core/: __init__.py  prediction.py
diffusion/domains/: domain.py  latent.py  pixel.py
diffusion/io/: __init__.py  ckpt.py  events.py
diffusion/losses/: __init__.py  snr.py
diffusion/objectives/: __init__.py  flow_matching.py
diffusion/perf/: __init__.py  model_cost.py  perf.py
diffusion/schedules/: __init__.py  flow_timesteps.py
diffusion/utils/: misc.py  oom.py  runmeta.py
diffusion/vae/: vae.py
docs/: cache.md  configuration.md  dataset.md  distributed.md  distributed_and_fsdp.md  evaluation.md  mmdit_smoke_pipeline.md  sampling.md  training.md  troubleshooting.md  usage.md  webui.md
domains/: __init__.py  pixel.py
eval_prompts/: composition.txt  img2img.txt  mmdit_composition.txt  mmdit_text_rendering.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: StatusPill.jsx
frontend/src/pages/: Dashboard.jsx  TrainPage.jsx
io/: ckpt.py  events.py
mmdit/: __init__.py  blocks.py  config.py  init.py  model.py  norms.py  patch.py
model/: __init__.py
model/mmdit/: attention.py  blocks.py  config.py  model.py  norms.py  patch.py  pos_embed.py  text_resampler.py  timestep.py
model/text/: __init__.py  cache.py  conditioning.py  encoder.py  ff.py  pretrained.py  utils.py
model/unet/: __init__.py  attention.py  blocks.py  embeddings.py  unet.py
objectives/: v_prediction.py
perf/: __init__.py  perf.py  triton_compat.py
sample/: api.py  build.py  cli.py
samplers/: __init__.py  cfg.py  ddim.py  ddim_cli.py  ddpm.py  dpm_solver.py  euler.py  flow_euler.py  flow_heun.py  heun.py  validation.py
scripts/: check_checkpoint_step.py  check_project.sh  convert_ckpt.py  lint.py  prepare_latents.py  prepare_text_cache.py  prepare_training_cache.py  sample.py  smoke_mmdit_rf.py  train.py  validate_cache.py
tests/: conftest.py  test_aspect_ratio_buckets.py  test_async_event_bus.py  test_attention_backend_config.py  test_attention_masks.py  test_bf16_fp32_safety.py  test_cache_validate_entrypoint.py  test_cfg_batched_inference.py  test_checkpoint_compat_mmdit.py  test_checkpoint_metadata_mmdit.py  test_checkpoint_pruning.py  test_checkpoint_resume_mmdit.py  test_cli_args.py  test_collate.py  test_conditioning_sanity.py  test_control_conditioning.py  test_dataset_task_sampling.py  test_distributed_accelerate_fsdp.py  test_ema_sample_flags.py  test_eval.py  test_eval_grids_sweeps.py  test_eval_prompt_bank.py  test_flow_heun_sanity.py  test_flow_objective.py  test_flow_objective_correctness.py  test_flow_sampler_determinism.py  test_flow_sampler_direction.py  test_gradient_checkpointing_mmdit.py  test_img2img_conditions.py  test_inpaint_conditions.py  test_inpaint_masks.py  test_lint_cli.py  test_milestone_profiles.py  test_mmdit_cfg.py  test_mmdit_shapes.py  test_mmdit_tiny_forward_backward.py  test_model_cost_profile.py  test_oom.py  test_pipeline_regressions.py  test_prompt_training_fields.py  (+26 more)
text/: __init__.py  cache.py  encoder.py  norms.py
text_enc/: __init__.py  build.py
text_enc/tokenizer/: __init__.py
tg_bot/: job_manager.py
tg_bot/services/: config_service.py
tokenizer/: bpe.py  config.py
train/: checkpoint.py  checkpoint_mmdit.py  cli.py  curriculum.py  dist.py  eval.py  eval_cli.py  eval_grid.py  eval_mmdit.py  inpaint_masks.py  loop.py  loop_mmdit.py  loop_mmdit_full.py  run_dirs.py  runner.py  sanity.py  schedulers.py  webui.py
train/metrics/: __init__.py  t_bins.py
unet/: attention.py
utils/: __init__.py  seed.py
vae/: __init__.py  vae.py
webui/backend/: app.py  argparse_reader.py  job_manager.py
webui/backend/services/: atomic.py  config_service.py
webui/frontend/: index.html  package-lock.json  package.json  vite.config.js
webui/frontend/src/: App.jsx  api.js  styles.css
webui/frontend/src/components/: ArgField.jsx  ErrorBoundary.jsx  LineChart.jsx  LogViewer.jsx  YamlEditor.jsx
webui/frontend/src/hooks/: useLogBuffer.js  useRunLogStream.js
webui/frontend/src/pages/: Dashboard.jsx  FilesPage.jsx  GeneratePage.jsx  PrepareLatentsPage.jsx  RunDetails.jsx  TrainPage.jsx  TrainSamplesPage.jsx
(+2 files in other folders)
